[package]
name = "spawn-blocking"
version = "0.1.0"
authors = ["You <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2"

[dev-dependencies]
async-std = "1.7"
criterion = "0.3.6"


[[bench]]
name = "argonautica_bench"
harness = false
